[gd_scene load_steps=8 format=1]

[ext_resource path="res://game/scenes/common/PuzzleSmartphone/Smartphone.gd" type="Script" id=1]
[ext_resource path="res://game/scenes/common/PuzzleSmartphone/smarphone.png" type="Texture" id=2]
[ext_resource path="res://Lock.gd" type="Script" id=3]
[ext_resource path="res://game/scenes/common/PuzzleSmartphone/phone-lock-little.tex" type="Texture" id=4]
[ext_resource path="res://game/scenes/common/PuzzleSmartphone/node-selected.tex" type="Texture" id=5]
[ext_resource path="res://game/scenes/common/PuzzleSmartphone/selector.tex" type="Texture" id=6]
[ext_resource path="res://Selector.gd" type="Script" id=7]

[node name="CanvasLayer" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Smartphone" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 250, -103 )
transform/scale = Vector2( 1.1, 1 )
z/z = 2
texture = ExtResource( 2 )
centered = false
modulate = Color( 0.0921936, 0.166659, 0.207031, 1 )

[node name="Label" type="Label" parent="Smartphone"]

rect/scale = Vector2( 1.4, 1.4 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 185.0
margin/top = 214.0
margin/right = 295.0
margin/bottom = 228.0
custom_colors/font_color = Color( 0.542969, 1, 0.61438, 1 )
text = "Unlock sequence"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LockNodes" type="GridContainer" parent="Smartphone"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 153.0
margin/top = 309.0
margin/right = 409.0
margin/bottom = 565.0
custom_constants/vseparation = 50
custom_constants/hseparation = 12
columns = 3
script/script = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="Smartphone/LockNodes"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Tween" type="Tween" parent="Smartphone/LockNodes"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Selector" type="Sprite" parent="Smartphone/LockNodes"]

texture = ExtResource( 6 )
centered = false
script/script = ExtResource( 7 )

[node name="DeveloperReadme" type="Label" parent="."]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 726.0
margin/top = 75.0
margin/right = 1080.0
margin/bottom = 208.0
text = "- \"E\" to start the sequence from the selected point
- Solution: 

- X -
- - -
- - -

"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PlayerInstructions" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 740.0
margin/top = 133.0
margin/right = 967.0
margin/bottom = 181.0
text = "Press \"E\" to toggle a node.
Press \"Q\" to leave the smartphone.
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="activate_lock" from="." to="Smartphone/LockNodes" method="_on_CanvasLayer_activate_lock"]


